data/derived/comb/progs/unify/prog2046.ml.out
Characters 82-85:
  | Sine e1 -> sin(eval(e));;
                       ^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
